test_suite/tests/ui/pass/arg_mut_slice.rs
use clapi::macros::*;

#[command]
#[arg(slice)]
fn test(slice: &mut [u32]){}

fn main(){}