test_suite/tests/ui/fail/misplace_attribute/misplace_arg.rs
use clapi::macros::*;

#[arg(name)]
fn app(name: String){}

fn main(){}